<resources>
    <string name="sign_in">Sign in</string>
    <string name="contact">Contact</string>
    <string name="error_code">Error!</string>
    <string name="items_count">%s items</string>
    <string name="order">Order</string>
    <string name="shuffle">Shuffle</string>
    <string name="sequence">Sequence</string>
    <string name="log_out">Logout</string>
    <string name="muzei">Muzei</string>
    <string name="exit">Exit</string>
    <string name="selected_album_">%s selected.</string>
    <string name="albums">Albums</string>
    <string name="shared_albums">Shared Albums</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="muzei_description">Open Muzei</string>
    <string name="logout_description">Clear stored data</string>
    <string name="category_description">Select category from settings</string>
    <string name="images_per_request">Images per request</string>
    <string name="purchase_ok">Thanks for supporting me :)</string>
    <string name="pro_version">Pro version</string>
    <string name="pro_version_description">If you get 409 error click here</string>

    <string name="pro_dialog_description">
        The Google Photos API has a limitation of 10.000 calls per day.\n\n
        Due to the high demand of Phuzei, you may get the 429 error while using this free version.\n\n
        For full support and better experience, please install the pro version.
    </string>
    <string name="source_not_activated">Phuzei is not activated</string>
    <string name="activate">Activate</string>

    <string-array name="images_count">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>
</resources>
