<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/contact"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/action_order"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sequence"
            android:checked="true"
            android:title="@string/sequence"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_shuffle"
            android:title="@string/shuffle"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/action_other">
        <item
            android:id="@+id/action_muzei"
            android:title="@string/muzei"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_log_out"
            android:title="@string/log_out"
            app:showAsAction="never"/>
    </group>
</menu>
