<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/donate"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/donateDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_item_padding"
            android:layout_marginRight="@dimen/menu_item_padding"
            android:text="@string/donate_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contactDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_item_padding"
            android:layout_marginRight="@dimen/menu_item_padding"
            android:text="pesiran@gmail.com"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/muzei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/muzei"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/muzeiDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_item_padding"
            android:layout_marginRight="@dimen/menu_item_padding"
            android:text="@string/muzei_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logoutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_item_padding"
            android:layout_marginRight="@dimen/menu_item_padding"
            android:text="@string/logout_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/imagesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/images_per_request"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/imagesCountDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_item_padding"
            android:layout_marginRight="@dimen/menu_item_padding"
            android:entries="@array/images_count"
            android:spinnerMode="dialog"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/order"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <RadioGroup
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sequence" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/shuffle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shuffle" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_category" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
